Fixed cards so they are equal height and Food Truck name overlaps the Truck image

--- a/index.css
+++ b/index.css
@@ -10,3 +10,17 @@ nav .brand-logo {
 .search_hero {
   margin-top: 120px;
 }
+
+.card.medium .card-image {
+  max-height: 100%;
+}
+
+.card .card-image .card-title {
+  width: 100%;
+  background: -moz-linear-gradient(top, transparent 0%, rgba(0, 0, 0, 0.75) 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, transparent), color-stop(100%, rgba(0, 0, 0, 0.75)));
+  background: -webkit-linear-gradient(top, transparent 0%, rgba(0, 0, 0, 0.75) 100%);
+  background: -o-linear-gradient(top, transparent 0%, rgba(0, 0, 0, 0.75) 100%);
+  background: -ms-linear-gradient(top, transparent 0%, rgba(0, 0, 0, 0.75) 100%);
+  background: linear-gradient(to bottom, transparent 0%, rgba(0, 0, 0, 0.75) 100%);
+}
